--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-toggle-dark-mode": "^1.1.1",
+    "swiper": "^11.0.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
